--- a/[gamemodes]/driftV/client/web/hud.html
+++ b/[gamemodes]/driftV/client/web/hud.html
@@ -8,7 +8,7 @@
     <body>
         <div id="container">
 			<img class="driftImage" src="images/drifting.png" />
-			<div class="driftDisplay"><span>40000</span></div>
+			<div class="driftDisplay"><span>784 654</span></div>
 			<div class="driftDisplayMulti"><span>x0.0</span></div>
         </div>
     </body>
