--- a/[gamemodes]/driftV/client/web/hud.html
+++ b/[gamemodes]/driftV/client/web/hud.html
@@ -16,7 +16,7 @@
         <div id="containerSucces">
 			<img class="animate__animated animate__bounceIn succesImage" src="images/success.png" />
 			<div class="animate__animated animate__bounceIn succesTitle"><span>Success</span></div>
-			<div class="animate__animated animate__fadeInUp animate__delay-1s succesText"><span>You just passed 1m points ! This is a very long text and it really need to be wrapped !</span></div>
+			<div class="animate__animated animate__fadeInUp animate__delay-1s succesText"><span>You just passed 1m points !</span></div>
         </div>
     </body>
 </html>
