--- a/[gamemodes]/loading/index.html
+++ b/[gamemodes]/loading/index.html
@@ -50,15 +50,15 @@
 
         <a href="javascript:void(0)" onmouseover="showNotify()" onmouseout="closeNotify()" style="transition: 0.5s;"><h1 style="position: absolute;left: 66.1%;top: 11.75%;color: white;font-size: 1.8vw;font-family: 'Lucida Console';"> 
             ━━━━━ Update ━━━━━ 
-            <br> LS Hub Floating text added
-            <br> Added XP system
-            <br> Reworked HUD
-            <br> Added players scoreboard (w)
-            <br> Race system done !
-            <br> Leaderboard for each race added !
-            <br> Reworked chat UI
-            <br> Reworked Notification UI
-            <br> Reworked F1 Menu !
+            <br> LS Night system added
+            <br> 
+            <li>Custom cop AI</li> 
+            <li>Custom succes</li> 
+            <li>Difficulty based on cop count</li> 
+
+            <br> New cars added !
+            <br> Reworked some logics
+            <br> Added some custom sound
         </h1></a>
         
 
