--- a/[gamemodes]/driftV/client/web/hud.html
+++ b/[gamemodes]/driftV/client/web/hud.html
@@ -2,8 +2,12 @@
     <head>
         <link href="css/hud.css" rel="stylesheet" type="text/css" />
         <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-		<script src="js/gauge.min.js"></script>
         <script src="js/hud.js" type="text/javascript"></script>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
@@ -18,5 +22,27 @@
 			<div class="animate__animated animate__bounceIn succesTitle"><span>Success</span></div>
 			<div class="animate__animated animate__fadeInUp animate__delay-1s succesText"><span>You just passed 1m points !</span></div>
         </div>
+
+        <div id="containerJoin">
+            <div class="joinButton">
+                <button class="btn waves-effect waves-light red lighten-1 clickJoinButton" type="submit" name="action">Join the server
+                    <i class="material-icons right">check</i>
+                </button>
+            </div>
+
+            <nav>
+                <div class="nav-wrapper">
+                  <a href="#" class="brand-logo right">DriftV </a>
+                  <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    <li><a>Season: 1</a></li>
+                    <li><a>Version: 0.5b</a></li>
+                    <li><a>Welcome to the drift paradise <i class="material-icons right">cloud</i> </a></li>
+                  </ul>
+                </div>
+              </nav>
+
+        </div>
+
+        
     </body>
 </html>
