--- a/[gamemodes]/driftV/client/web/hud.html
+++ b/[gamemodes]/driftV/client/web/hud.html
@@ -3,6 +3,7 @@
         <link href="css/hud.css" rel="stylesheet" type="text/css" />
         <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
         <script src="js/hud.js" type="text/javascript"></script>
+        <script src="js/music.js" type="text/javascript"></script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -40,7 +41,6 @@
                   </ul>
                 </div>
               </nav>
-
         </div>
 
         
