Starting new loading screen

--- a/[gamemodes]/driftV/client/web/hud.html
+++ b/[gamemodes]/driftV/client/web/hud.html
@@ -8,6 +8,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+        <!-- UIkit CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.15/dist/css/uikit.min.css" />
+
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.15/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.15/dist/js/uikit-icons.min.js"></script>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
@@ -34,8 +41,8 @@
                 <div class="nav-wrapper">
                   <a href="#" class="brand-logo right">DriftV </a>
                   <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a>Season: 1</a></li>
-                    <li><a>Version: 2.0b</a></li>
+                    <li><a>Season: PRE-SEASON</a></li>
+                    <li><a>Version: 2.2b</a></li>
                     <li><a>Welcome to the drift paradise <i class="material-icons right">cloud</i> </a></li>
                   </ul>
                 </div>
