--- a/[gamemodes]/loading/index.html
+++ b/[gamemodes]/loading/index.html
@@ -1,15 +1,30 @@
 <html>
-    
-    <head>    
-        <meta charset="utf-8"/>
-        <link type ="text/css" rel ="stylesheet" href ="css/main.css"/>        
-    </head>
 
-    <body>
-        <!-- <img src="../img/Loading_screen.png" width="1920" height="1080" class="background"> -->
-        <div class="bg"></div>
+<head>
+    <meta charset="utf-8" />
+    <link type="text/css" rel="stylesheet" href="css/main.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="js/anime.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
 
+<body>
+    <div class="parent">
+        <div class="bg animate__animated  animate__fadeIn"></div>
+
+        <!-- <img src="img/Loading_screen.png" class="bg">  -->
+        <img id="carAnim" src="img/sedan-car-model.svg" class="car">
+    </div>
 
     </div>
-    </body>
+</body>
+
+<script>
+    var audioPlayer = null;
+    audioPlayer = new Howl({ src: ["./sounds/music.ogg"] });
+    audioPlayer.volume(0.1);
+    audioPlayer.play();
+</script>
+
 </html>
